--- a/2 LSTM.ipynb
+++ b/2 LSTM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 3,
    "id": "7549c838-0180-4d94-aa62-aafd3e443843",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 6,
    "id": "6b67acdc-c569-4a3f-9a50-26c332dffc8d",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "4  Normal  "
       ]
      },
-     "execution_count": 264,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 9,
    "id": "180a6a68-f457-4403-b614-2657b5be26a6",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 12,
    "id": "4fb89ef0-3598-4e09-a483-23d55eda3428",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 15,
    "id": "034b612b-a481-4f85-b6dd-0ed2dea3724b",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 17,
    "id": "1daa5a0e-54e4-4e85-afd6-e2e7991c83a2",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 19,
    "id": "e4dbb679-0c47-44e4-8665-8957dc2b4e88",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 22,
    "id": "c131da66-183c-4e61-b186-b71f9a709779",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 24,
    "id": "9a88905f-c1f4-46c7-93c1-b52a1760ae50",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 25,
    "id": "7b22330a-302e-4968-aeaa-56b8385381b9",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 29,
    "id": "4b9a6f66-aa32-4c50-a460-db9d4ca09a89",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 31,
    "id": "aac9e079-5a01-4e8c-b3da-e496baca9105",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 33,
    "id": "1fc1af0f-96c7-42de-8eb7-007644a21f8f",
    "metadata": {},
    "outputs": [],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 35,
    "id": "13130599-d933-4b92-96e3-0430edd91fff",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 37,
    "id": "f09b31a1-3af4-4433-acd8-9d90de677403",
    "metadata": {},
    "outputs": [
@@ -386,22 +386,22 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 34ms/step - accuracy: 0.5281 - loss: 0.6951 - val_accuracy: 0.1131 - val_loss: 0.7067\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 139ms/step - accuracy: 0.6308 - loss: 0.6952 - val_accuracy: 0.1131 - val_loss: 0.6996\n",
       "Epoch 2/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 31ms/step - accuracy: 0.4319 - loss: 0.7003 - val_accuracy: 0.8869 - val_loss: 0.6837\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 122ms/step - accuracy: 0.4334 - loss: 0.7004 - val_accuracy: 0.8869 - val_loss: 0.6843\n",
       "Epoch 3/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 31ms/step - accuracy: 0.4955 - loss: 0.7072 - val_accuracy: 0.8869 - val_loss: 0.6783\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 114ms/step - accuracy: 0.4586 - loss: 0.7076 - val_accuracy: 0.8869 - val_loss: 0.6803\n",
       "Epoch 4/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 32ms/step - accuracy: 0.7039 - loss: 0.6932 - val_accuracy: 0.1131 - val_loss: 0.6988\n"
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 117ms/step - accuracy: 0.7367 - loss: 0.6925 - val_accuracy: 0.8869 - val_loss: 0.6868\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x1b2b4ff9ee0>"
+       "<keras.src.callbacks.history.History at 0x211de59c290>"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 39,
    "id": "df51143d-9e9b-4118-99d8-3b18f46ec356",
    "metadata": {},
    "outputs": [
@@ -425,16 +425,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - accuracy: 0.6675 - loss: 0.6891\n"
+      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 53ms/step - accuracy: 0.6675 - loss: 0.6894\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.6836987137794495, 0.8869431018829346]"
+       "[0.6843394637107849, 0.8869431018829346]"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,12 +448,12 @@
    "id": "b172a3e9-be65-40dc-af57-0ada4ba5d6ac",
    "metadata": {},
    "source": [
-    "## Predicting"
+    "## Predicting unseen logs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 41,
    "id": "646b4beb-a639-4631-aea9-e3ef98322d4c",
    "metadata": {},
    "outputs": [
@@ -461,16 +461,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 193ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 575ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.49384698]], dtype=float32)"
+       "array([[0.49426717]], dtype=float32)"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 51,
    "id": "4e6077df-74c5-4eb8-a15b-47d9c90c7dff",
    "metadata": {},
    "outputs": [
@@ -492,30 +492,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 15ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.49384698]], dtype=float32)"
+       "array([[0.49426717]], dtype=float32)"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# This log event is supposed to be an Anomaly\n",
-    "text = ['29 INFO dfs.FSNamesystem: BLOCK* NameSystem.allocateBlock: /user/root/sortrand/_temporary/_task_200811092030_0002_r_000074_2/part-00074.']\n",
+    "text = ['INFO dfs.FSNamesystem: BLOCK* NameSystem.allocateBlock: /user/root/sortrand/_temporary/_task_200811092030_0002_r_000074_2/part-00074.']\n",
     "\n",
     "model.predict(tf.constant(text))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5810ac76-046b-4efd-9411-efd728a05c21",
+   "id": "39b688df-90b4-4fcb-8f35-8912244bc178",
    "metadata": {},
    "source": [
     "##### From the results, this model does not seemed to perform well in prediction"
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d6347bc-d3e4-4f9d-bc77-7b263cde07e0",
+   "id": "515459a6-3330-4b00-833f-7f6c46ce814c",
    "metadata": {},
    "outputs": [],
    "source": []
