--- a/3 CNN.ipynb
+++ b/3 CNN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "7549c838-0180-4d94-aa62-aafd3e443843",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "6b67acdc-c569-4a3f-9a50-26c332dffc8d",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4  Normal  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "437a3f85-aae8-4c7a-a2e2-cc24a98abef8",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "id": "d7b70d10-c13f-4a55-811e-ff4853bf9a33",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "id": "c00c4dfc-a1b8-422d-a01f-d902e3b30863",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "id": "c25a8939-0003-4cbe-b6df-413132a4abfd",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "id": "e4dbb679-0c47-44e4-8665-8957dc2b4e88",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "id": "c131da66-183c-4e61-b186-b71f9a709779",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "id": "9a88905f-c1f4-46c7-93c1-b52a1760ae50",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "id": "7b22330a-302e-4968-aeaa-56b8385381b9",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "id": "4b9a6f66-aa32-4c50-a460-db9d4ca09a89",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "id": "aac9e079-5a01-4e8c-b3da-e496baca9105",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "id": "1fc1af0f-96c7-42de-8eb7-007644a21f8f",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "id": "13130599-d933-4b92-96e3-0430edd91fff",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "id": "f09b31a1-3af4-4433-acd8-9d90de677403",
    "metadata": {},
    "outputs": [
@@ -385,28 +385,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 67ms/step - accuracy: 0.7819 - loss: 0.5643 - val_accuracy: 0.9464 - val_loss: 0.1810\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 74ms/step - accuracy: 0.7413 - loss: 0.5494 - val_accuracy: 0.9346 - val_loss: 0.2537\n",
       "Epoch 2/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 70ms/step - accuracy: 0.9158 - loss: 0.2328 - val_accuracy: 0.9583 - val_loss: 0.1224\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 71ms/step - accuracy: 0.9238 - loss: 0.2334 - val_accuracy: 0.9565 - val_loss: 0.1390\n",
       "Epoch 3/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 70ms/step - accuracy: 0.9510 - loss: 0.1972 - val_accuracy: 0.9583 - val_loss: 0.1718\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 72ms/step - accuracy: 0.9553 - loss: 0.1971 - val_accuracy: 0.9565 - val_loss: 0.1666\n",
       "Epoch 4/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 70ms/step - accuracy: 0.9614 - loss: 0.1772 - val_accuracy: 0.9629 - val_loss: 0.1629\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 71ms/step - accuracy: 0.9596 - loss: 0.1793 - val_accuracy: 0.9624 - val_loss: 0.1683\n",
       "Epoch 5/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 71ms/step - accuracy: 0.9613 - loss: 0.1693 - val_accuracy: 0.9639 - val_loss: 0.1568\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 71ms/step - accuracy: 0.9604 - loss: 0.1696 - val_accuracy: 0.9642 - val_loss: 0.1579\n",
       "Epoch 6/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 70ms/step - accuracy: 0.9627 - loss: 0.1706 - val_accuracy: 0.9598 - val_loss: 0.1726\n",
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 71ms/step - accuracy: 0.9608 - loss: 0.1710 - val_accuracy: 0.9624 - val_loss: 0.1699\n",
       "Epoch 7/10\n",
-      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 70ms/step - accuracy: 0.9621 - loss: 0.1621 - val_accuracy: 0.9562 - val_loss: 0.1708\n"
+      "\u001b[1m122/122\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 71ms/step - accuracy: 0.9631 - loss: 0.1617 - val_accuracy: 0.9575 - val_loss: 0.1720\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x21aaafe1820>"
+       "<keras.src.callbacks.history.History at 0x220e9356570>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "id": "df51143d-9e9b-4118-99d8-3b18f46ec356",
    "metadata": {},
    "outputs": [
@@ -430,16 +430,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 27ms/step - accuracy: 0.9313 - loss: 0.1704\n"
+      "\u001b[1m31/31\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 26ms/step - accuracy: 0.9317 - loss: 0.1706\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.1567613035440445, 0.9639453887939453]"
+       "[0.1578804850578308, 0.9642029404640198]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "id": "646b4beb-a639-4631-aea9-e3ef98322d4c",
    "metadata": {},
    "outputs": [
@@ -466,16 +466,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 357ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 274ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.00014648]], dtype=float32)"
+       "array([[0.00105878]], dtype=float32)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 93,
    "id": "4e6077df-74c5-4eb8-a15b-47d9c90c7dff",
    "metadata": {},
    "outputs": [
@@ -497,30 +497,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 30ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.9231655]], dtype=float32)"
+       "array([[0.9762936]], dtype=float32)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# This log event is supposed to be an Anomaly\n",
-    "text = ['29 INFO dfs.FSNamesystem: BLOCK* NameSystem.allocateBlock: /user/root/sortrand/_temporary/_task_200811092030_0002_r_000074_2/part-00074.']\n",
+    "text = ['INFO dfs.FSNamesystem: BLOCK* NameSystem.allocateBlock: /user/root/sortrand/_temporary/_task_200811092030_0002_r_000074_2/part-00074.']\n",
     "\n",
     "model.predict(tf.constant(text))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9adf7801-c559-4c36-9337-3724b13fb024",
+   "id": "e6499601-928e-425a-ae91-97360b535ac9",
    "metadata": {},
    "source": [
     "##### From the results, CNN does better than LSTM in the prediction"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d6347bc-d3e4-4f9d-bc77-7b263cde07e0",
+   "id": "b70e2137-63ed-4b10-8787-6258144c483e",
    "metadata": {},
    "outputs": [],
    "source": []
